image alignment fix

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -676,6 +676,9 @@ CLASSWORK - GRAPHICS
 #images {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 #classtitle h1 {
     justify-content: center;
